--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^2.0.0",
     "jquery": "^3.5.1",
+    "mixitup": "^3.3.1",
     "sass": "^1.58.0",
     "slick-carousel": "^1.8.1"
+  },
+  "dependencies": {
+    "@fancyapps/ui": "^5.0.22"
   }
 }
